<resources>
    <string name="app_name">MuslimApp</string>
    <string name="login">Login</string>
    <string name="username">Email</string>
    <string name="username2">Username</string>
    <string name="password">Password</string>
    <string name="forgotpassword">forgot password?</string>
    <string name="dontHaveAccount">Don\'t Have Account?</string>
    <string name="register">Register</string>
    <string name="verifyPass">Verify Password</string>
    <string name="pria">Pria</string>
    <string name="wanita">Wanita</string>
    <string name="email">Email</string>
    <string name="aggre">Dengan Ini Saya Menyetujui Kebijakan Dan Privasi</string>
    <string name="succesRegister">Berhasil Mendaftar</string>
    <string name="cautionSucces">Yeey, Kamu Sekarang Sudah Memiliki Akun. Silahkan Login!</string>
    <string name="accountNotRegist">Account Tidak Terdaftar!</string>
    <string name="pleaseRegist">Silahkan Register Terlebih Dahulu!</string>
    <string name="Logout">Logout</string>
    <string name="setting">Setting</string>
    <string name="nama">Nama User</string>
    <string name="namaUser">Nama</string>
    <string name="emailUser">Email</string>
    <string name="passUser">Password</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="saveChange">Simpan Perubahan</string>
    <string name="password2">Password</string>
    <string name="email2">Email</string>
    <string name="nama2">Nama User</string>
    <string name="isyaa">Isya</string>
    <string name="descriptionImage">Image Description</string>
    <string name="magrib">Maghrib</string>
    <string name="asar">Asr</string>
    <string name="Dhuhr">Dhuhr</string>
    <string name="prayScedule">Jadwal Sholat</string>
    <string name="Sunrise">Sunrise</string>
    <string name="Fajr">Fajr</string>
    <string name="badConnection">Bad Connection</string>
    <string name="asmaulhusna">Asmaul Husna</string>
    <string name="tasbeeh">Tasbeeh</string>
    <string name="muslimApp">Muslim App</string>
    <string name="qibla">Qiblat</string>
    <string name="dzikirPagi">Dzikir Pagi</string>
    <string name="dzikirPetang">Dzikir Petang</string>
    <string name="Judul">Judul</string>
    <string name="No">No</string>
    <string name="SubJudul">SubJudul</string>
    <string name="Adzan">Adzan</string>

</resources>
