<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginVertical="5dp"
    android:layout_marginHorizontal="5dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/No"
        android:id="@+id/tvNo"
        android:maxLines="2"
        android:textSize="20sp"
        android:textStyle="bold"
        android:ellipsize="end"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Judul"
        android:id="@+id/tvJudul"
        android:textStyle="bold"
        android:textSize="30sp"
        android:ellipsize="end"
        android:layout_gravity="end"
        android:layout_marginVertical="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SubJudul"
        android:id="@+id/tvSubJudul"
        android:textSize="20sp"
        android:ellipsize="end"/>

</LinearLayout>