<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    tools:context=".ScreenActivity">

    <ImageView
        android:id="@+id/ivBg"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:contentDescription="@string/descriptionImage"
        android:scaleType="centerCrop"
        android:src="@drawable/morning" />

    <View
        android:id="@+id/viewGradient"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_alignBottom="@id/ivBg"
        android:background="@drawable/shadow_view" />


    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="Hi, Username"
        android:textColor="#FFF"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextClock
        android:id="@+id/tvClock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvUsername"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:format24Hour="hh:mm a"
        android:textColor="#FFF"
        android:textSize="50sp"
        android:textStyle="bold"
        tools:text="12:00 AM" />

    <TextView
        android:id="@+id/tvCalender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvClock"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:shadowColor="#000"
        android:shadowRadius="2"
        android:text="17 September 2019"
        android:textColor="#FFF" />

    <android.support.v7.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="30dp">

        <RelativeLayout
            android:id="@+id/scedhule"
            android:layout_width="384dp"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="Muslim App"
                android:textColor="#689F38"
                android:textSize="24sp" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/card"
        android:layout_centerInParent="true"
        android:layout_marginTop="24dp"
        android:text="@string/badConnection"
        android:visibility="gone" />

    <com.github.ybq.android.spinkit.SpinKitView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/spin_kit"
        style="@style/SpinKitView.ThreeBounce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/card"
        android:layout_centerHorizontal="true"
        app:SpinKit_Color="@color/colorAccent" />

    <android.support.v7.widget.CardView
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:id="@+id/cv1"
        android:onClick="asmaulHusna"
        app:cardCornerRadius="25dp"
        android:layout_below="@+id/card">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/allah"
                android:layout_margin="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/asmaulhusna"
                android:textStyle="bold"
                android:textSize="15sp"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_marginTop="15dp"
        android:layout_marginLeft="25dp"
        android:layout_toRightOf="@+id/cv1"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:id="@+id/cv2"
        android:onClick="praySchedule"
        app:cardCornerRadius="25dp"
        android:layout_below="@+id/card">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/sajadah"
                android:layout_margin="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prayScedule"
                android:textStyle="bold"
                android:textSize="15sp"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_marginTop="15dp"
        android:layout_marginLeft="25dp"
        android:layout_toRightOf="@+id/cv2"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:id="@+id/cv3"
        android:onClick="tasbeeh"
        app:cardCornerRadius="25dp"
        android:layout_below="@+id/card">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/tasbih"
                android:layout_margin="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tasbeeh"
                android:textStyle="bold"
                android:textSize="15sp"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_marginTop="15dp"
        android:layout_marginLeft="25dp"
        android:layout_toRightOf="@+id/cv2"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:id="@+id/cv4"
        android:onClick="Qibla"
        app:cardCornerRadius="25dp"
        android:layout_below="@+id/cv1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/bedug"
                android:layout_margin="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Adzan"
                android:textStyle="bold"
                android:textSize="15sp"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_marginTop="15dp"
        android:layout_toLeftOf="@+id/cv2"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:id="@+id/cv5"
        android:onClick="DzikrPagi"
        app:cardCornerRadius="25dp"
        android:layout_below="@+id/cv2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/morningback"
                android:layout_margin="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dzikirPagi"
                android:textStyle="bold"
                android:textSize="15sp"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_marginTop="15dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_centerHorizontal="true"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:id="@+id/cv6"
        android:onClick="DzikirPetang"
        app:cardCornerRadius="25dp"
        android:layout_below="@+id/cv2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/afback"
                android:layout_margin="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dzikirPetang"
                android:textStyle="bold"
                android:textSize="15sp"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>


</RelativeLayout>
